fix: New Chinese Traditional translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -175,6 +175,7 @@
   "currently viewing": "正在瀏覽",
   "previously edited": "先前編輯過",
   "You": "您",
+  "Avatar of {{ name }}": "Avatar of {{ name }}",
   "Viewers": "檢視者",
   "Collections are used to group documents and choose permissions": "文件集用於將文件分組並設定權限。",
   "Name": "名稱",
@@ -205,6 +206,7 @@
   "Move document": "移動文件",
   "Moving": "正在移動",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "將文件<em>{{ title }}</em>移動至「{{ newCollectionName }}」文件集，會將所有工作區成員的權限從 「<em>{{ prevPermission }}</em>」 變更為 「 <em>{{ newPermission }}</em>」。",
+  "More options": "More options",
   "Submenu": "子選單",
   "Collections could not be loaded, please reload the app": "文件集無法被載入，請重新整理 App",
   "Start view": "初始介面",
@@ -329,6 +331,7 @@
   "Mark all as read": "全部標記為已讀",
   "You're all caught up": "已看完所有評論！",
   "Icon": "Icon",
+  "OAuth client icon": "OAuth client icon",
   "My App": "My App",
   "Tagline": "Tagline",
   "A short description": "A short description",
@@ -405,12 +408,15 @@
   "{{ count }} groups added to the document": "{{ count }} 個團隊已新增至此文件",
   "{{ count }} groups added to the document_plural": "{{ count }} 個團隊已新增至此文件",
   "Logo": "Logo",
+  "Expand sidebar": "Expand sidebar",
+  "Collapse sidebar": "Collapse sidebar",
   "Archived collections": "已封存的文件集",
   "New doc": "新文件",
   "Empty": "空無一物",
   "Collapse": "收合",
   "Expand": "展開",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "不支援的文件格式－請嘗試使用 Markdown、純文字、HTML 或 Word 格式",
+  "Import files": "Import files",
   "Go back": "返回",
   "Go forward": "前進",
   "Could not load shared documents": "無法載入分享文件",
@@ -460,6 +466,8 @@
   "Replacement": "替代",
   "Replace": "取代",
   "Replace all": "全部取代",
+  "Image width": "Image width",
+  "Image height": "Image height",
   "Profile picture": "大頭貼",
   "Create a new doc": "建立新文件",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }}不會被通知，因為他們沒有這個文件的存取權",
@@ -486,7 +494,8 @@
   "Create a new child doc": "建立子文件",
   "Delete table": "刪除表格",
   "Delete file": "刪除檔案",
-  "Width x Height": "Width x Height",
+  "Width": "Width",
+  "Height": "Height",
   "Download file": "下載檔案",
   "Replace file": "取代檔案",
   "Delete image": "刪除圖片",
@@ -680,6 +689,7 @@
   "only you": "僅限自己",
   "person": "人",
   "people": "人",
+  "Document title": "Document title",
   "Last updated": "最後更新於",
   "Type '/' to insert, or start writing…": "輸入 '/' 以插入，或直接撰寫…",
   "Hide contents": "隱藏目錄內容",
@@ -924,6 +934,7 @@
   "Rotate secret": "Rotate secret",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
+  "Application icon": "Application icon",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Developer name",
   "Developer URL": "Developer URL",
@@ -1030,6 +1041,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "這些設定會影響所有團隊成員所看到的工作區外觀。",
   "Display": "介面",
   "The logo is displayed at the top left of the application.": "標誌圖案會被顯示在應用程式的左上方。",
+  "Workspace logo": "Workspace logo",
   "The workspace name, usually the same as your company name.": "工作區的名稱，通常與您的公司名稱相同。",
   "Description": "Description",
   "A short description of your workspace.": "A short description of your workspace.",
@@ -1260,6 +1272,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ timeAgo }} 由 {{ user }} 更新",
   "You created {{ timeAgo }}": "{{ timeAgo }} 由您新增",
   "{{ user }} created {{ timeAgo }}": "{{ timeAgo }} 由 {{ user }} 新增",
+  "Caption": "Caption",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
