fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -175,6 +175,7 @@
   "currently viewing": "hiện đang xem",
   "previously edited": "đã chỉnh sửa trước",
   "You": "Bạn",
+  "Avatar of {{ name }}": "Avatar of {{ name }}",
   "Viewers": "Người xem",
   "Collections are used to group documents and choose permissions": "Bộ sưu tập được sử dụng để nhóm các tài liệu và chọn quyền",
   "Name": "Tên",
@@ -205,6 +206,7 @@
   "Move document": "Chuyển tài liệu",
   "Moving": "Đang chuyển",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Việc di chuyển tài liệu <em>{{ title }}</em> sang bộ sưu tập {{ newCollectionName }} sẽ thay đổi quyền cho tất cả các thành viên trong không gian làm việc từ <em>{{ prevPermission }}</em> thành <em>{{ newPermission }}</em>.",
+  "More options": "More options",
   "Submenu": "Menu phụ",
   "Collections could not be loaded, please reload the app": "Không thể tải bộ sưu tập, vui lòng tải lại ứng dụng",
   "Start view": "Bắt đầu xem",
@@ -329,6 +331,7 @@
   "Mark all as read": "Đánh dấu tất cả là đã đọc",
   "You're all caught up": "Bạn đã xem hết",
   "Icon": "Icon",
+  "OAuth client icon": "OAuth client icon",
   "My App": "Ứng dụng của tôi",
   "Tagline": "Tagline",
   "A short description": "Mô tả ngắn",
@@ -405,12 +408,15 @@
   "{{ count }} groups added to the document": "{{ count }} nhóm đã được thêm vào tài liệu",
   "{{ count }} groups added to the document_plural": "{{ count }} nhóm đã được thêm vào tài liệu",
   "Logo": "Logo",
+  "Expand sidebar": "Expand sidebar",
+  "Collapse sidebar": "Collapse sidebar",
   "Archived collections": "Bộ sưu tập đã lưu trữ",
   "New doc": "Tài liệu mới",
   "Empty": "Trống",
   "Collapse": "Thu nhỏ",
   "Expand": "Mở rộng",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Tài liệu không được hỗ trợ - hãy thử Markdown, Plain text, HTML hoặc Word",
+  "Import files": "Import files",
   "Go back": "Quay lại",
   "Go forward": "Đi tiếp",
   "Could not load shared documents": "Không thể tải tài liệu được chia sẻ",
@@ -460,6 +466,8 @@
   "Replacement": "Thay thế",
   "Replace": "Thay thế",
   "Replace all": "Thay thế tất cả",
+  "Image width": "Image width",
+  "Image height": "Image height",
   "Profile picture": "Ảnh đại diện",
   "Create a new doc": "Tạo một tài liệu mới",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} sẽ không được thông báo, bởi vì họ không có quyền truy cập tài liệu này",
@@ -486,7 +494,8 @@
   "Create a new child doc": "Create a new child doc",
   "Delete table": "Xóa bảng",
   "Delete file": "Xóa tệp tin",
-  "Width x Height": "Rộng x Cao",
+  "Width": "Width",
+  "Height": "Height",
   "Download file": "Tải xuống tập tin",
   "Replace file": "Thay thế tập tin",
   "Delete image": "Xóa ảnh",
@@ -680,6 +689,7 @@
   "only you": "chỉ bạn",
   "person": "cá nhân",
   "people": "người tham gia",
+  "Document title": "Document title",
   "Last updated": "Cập nhật gần nhất",
   "Type '/' to insert, or start writing…": "Gõ '/' để chèn hoặc bắt đầu viết…",
   "Hide contents": "Ẩn nội dung",
@@ -924,6 +934,7 @@
   "Rotate secret": "Rotate secret",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
+  "Application icon": "Application icon",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Developer name",
   "Developer URL": "Developer URL",
@@ -1030,6 +1041,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "These settings affect the way that your workspace appears to everyone on the team.",
   "Display": "Hiển thị",
   "The logo is displayed at the top left of the application.": "Logo được hiển thị ở trên cùng bên trái của ứng dụng.",
+  "Workspace logo": "Workspace logo",
   "The workspace name, usually the same as your company name.": "Tên workspace, thường giống với tên công ty của bạn.",
   "Description": "Description",
   "A short description of your workspace.": "A short description of your workspace.",
@@ -1260,6 +1272,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} updated {{ timeAgo }}",
   "You created {{ timeAgo }}": "You created {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}",
+  "Caption": "Caption",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
