fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -175,6 +175,7 @@
   "currently viewing": "atualmente visualizando",
   "previously edited": "editou anteriormente",
   "You": "Você",
+  "Avatar of {{ name }}": "Avatar of {{ name }}",
   "Viewers": "Visualizadores",
   "Collections are used to group documents and choose permissions": "Coleções são usadas para agrupar documentos e definir permissões",
   "Name": "Nome",
@@ -205,6 +206,7 @@
   "Move document": "Mover documento",
   "Moving": "Movendo",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Mover o documento <em>{{ title }}</em> para a coleção {{ newCollectionName }} mudará a permissão para todos os membros do espaço de trabalho de <em>{{ prevPermission }}</em> para <em>{{ newPermission }}</em>.",
+  "More options": "More options",
   "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "Não foi possível carregar as coleções, recarregue o aplicativo",
   "Start view": "Visualização de início",
@@ -329,6 +331,7 @@
   "Mark all as read": "Marcar tudo como lido",
   "You're all caught up": "Você está em dia",
   "Icon": "Ícone",
+  "OAuth client icon": "OAuth client icon",
   "My App": "Meu Aplicativo",
   "Tagline": "Slogan",
   "A short description": "Uma breve descrição",
@@ -405,12 +408,15 @@
   "{{ count }} groups added to the document": "{{ count }} grupos foram adicionados ao documento",
   "{{ count }} groups added to the document_plural": "{{ count }} grupos foram adicionados ao documento",
   "Logo": "Logotipo",
+  "Expand sidebar": "Expand sidebar",
+  "Collapse sidebar": "Collapse sidebar",
   "Archived collections": "Coleções arquivadas",
   "New doc": "Novo documento",
   "Empty": "Vazio",
   "Collapse": "Recolher",
   "Expand": "Expandir",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Documento não compatível - experimente Markdown, Texto simples, HTML ou Word",
+  "Import files": "Import files",
   "Go back": "Voltar",
   "Go forward": "Avançar",
   "Could not load shared documents": "Não foi possível carregar documentos compartilhados",
@@ -460,6 +466,8 @@
   "Replacement": "Substituição",
   "Replace": "Substituir",
   "Replace all": "Substituir todos",
+  "Image width": "Image width",
+  "Image height": "Image height",
   "Profile picture": "Imagem do perfil",
   "Create a new doc": "Criar um novo documento",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} não será notificado, pois não tem acesso a este documento",
@@ -486,7 +494,8 @@
   "Create a new child doc": "Criar um documento filho",
   "Delete table": "Excluir tabela",
   "Delete file": "Excluir arquivo",
-  "Width x Height": "Largura x Altura",
+  "Width": "Width",
+  "Height": "Height",
   "Download file": "Baixar arquivo",
   "Replace file": "Substituir arquivo",
   "Delete image": "Excluir imagem",
@@ -680,6 +689,7 @@
   "only you": "apenas você",
   "person": "pessoa",
   "people": "pessoas",
+  "Document title": "Document title",
   "Last updated": "Última atualização",
   "Type '/' to insert, or start writing…": "Digite '/' para inserir, ou comece a escrever…",
   "Hide contents": "Ocultar conteúdo",
@@ -924,6 +934,7 @@
   "Rotate secret": "Rotacionar segredo",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotacionar o segredo do cliente invalidará o segredo atual. Certifique-se de atualizar todas as aplicações usando essas credenciais.",
   "Displayed to users when authorizing": "Visível aos usuários ao autorizar",
+  "Application icon": "Application icon",
   "Developer information shown to users when authorizing": "Informações de desenvolvedor exibidas aos usuários ao autorizar",
   "Developer name": "Nome do desenvolvedor",
   "Developer URL": "URL do desenvolvedor",
@@ -1030,6 +1041,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "Essas configurações afetam a forma como o seu espaço de trabalho aparece para todos da equipe.",
   "Display": "Exibição",
   "The logo is displayed at the top left of the application.": "O logotipo é exibido no canto superior esquerdo do aplicativo.",
+  "Workspace logo": "Workspace logo",
   "The workspace name, usually the same as your company name.": "O nome do espaço de trabalho, geralmente igual ao nome da sua empresa.",
   "Description": "Descrição",
   "A short description of your workspace.": "Uma breve descrição do seu espaço de trabalho.",
@@ -1260,6 +1272,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} atualizou {{ timeAgo }}",
   "You created {{ timeAgo }}": "Você criou {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} criou {{ timeAgo }}",
+  "Caption": "Caption",
   "Open": "Open",
   "Error loading data": "Erro ao carregar os dados"
 }
