fix: New Indonesian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -175,6 +175,7 @@
   "currently viewing": "sedang melihat",
   "previously edited": "sebelumnya menyunting",
   "You": "Anda",
+  "Avatar of {{ name }}": "Avatar of {{ name }}",
   "Viewers": "Jumlah viewer",
   "Collections are used to group documents and choose permissions": "Collections are used to group documents and choose permissions",
   "Name": "Nama",
@@ -205,6 +206,7 @@
   "Move document": "Pindahkan dokumen",
   "Moving": "Memindahkan",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.",
+  "More options": "More options",
   "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "Koleksi tidak dapat dimuat, harap muat ulang aplikasi",
   "Start view": "Tampilan awal",
@@ -329,6 +331,7 @@
   "Mark all as read": "Mark all as read",
   "You're all caught up": "You're all caught up",
   "Icon": "Icon",
+  "OAuth client icon": "OAuth client icon",
   "My App": "My App",
   "Tagline": "Tagline",
   "A short description": "A short description",
@@ -405,12 +408,15 @@
   "{{ count }} groups added to the document": "{{ count }} groups added to the document",
   "{{ count }} groups added to the document_plural": "{{ count }} groups added to the document",
   "Logo": "Logo",
+  "Expand sidebar": "Expand sidebar",
+  "Collapse sidebar": "Collapse sidebar",
   "Archived collections": "Archived collections",
   "New doc": "Dokumen baru",
   "Empty": "Kosong",
   "Collapse": "Persingkat",
   "Expand": "Perlengkap",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Dokumen tidak didukung – coba Markdown, teks biasa, HTML, atau Word",
+  "Import files": "Import files",
   "Go back": "Kembali",
   "Go forward": "Ke berikutnya",
   "Could not load shared documents": "Could not load shared documents",
@@ -460,6 +466,8 @@
   "Replacement": "Replacement",
   "Replace": "Replace",
   "Replace all": "Replace all",
+  "Image width": "Image width",
+  "Image height": "Image height",
   "Profile picture": "Gambar profil",
   "Create a new doc": "Buat dokumen baru",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} won't be notified, as they do not have access to this document",
@@ -486,7 +494,8 @@
   "Create a new child doc": "Create a new child doc",
   "Delete table": "Hapus tabel",
   "Delete file": "Delete file",
-  "Width x Height": "Width x Height",
+  "Width": "Width",
+  "Height": "Height",
   "Download file": "Download file",
   "Replace file": "Replace file",
   "Delete image": "Hapus gambar",
@@ -680,6 +689,7 @@
   "only you": "hanya Anda",
   "person": "orang",
   "people": "orang",
+  "Document title": "Document title",
   "Last updated": "Terakhir diperbarui",
   "Type '/' to insert, or start writing…": "Ketik '/' untuk menyisipkan, atau mulai menulis…",
   "Hide contents": "Sembunyikan isi",
@@ -924,6 +934,7 @@
   "Rotate secret": "Rotate secret",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
+  "Application icon": "Application icon",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Developer name",
   "Developer URL": "Developer URL",
@@ -1030,6 +1041,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "These settings affect the way that your workspace appears to everyone on the team.",
   "Display": "Tampilan",
   "The logo is displayed at the top left of the application.": "Logo ditampilkan di atas kiri aplikasi.",
+  "Workspace logo": "Workspace logo",
   "The workspace name, usually the same as your company name.": "Nama workspace, biasanya sama dengan nama perusahaan Anda.",
   "Description": "Description",
   "A short description of your workspace.": "A short description of your workspace.",
@@ -1260,6 +1272,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} updated {{ timeAgo }}",
   "You created {{ timeAgo }}": "You created {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}",
+  "Caption": "Caption",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
