fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -175,6 +175,7 @@
   "currently viewing": "ser nå",
   "previously edited": "tidligere redigert",
   "You": "Du",
+  "Avatar of {{ name }}": "Avatar of {{ name }}",
   "Viewers": "Seere",
   "Collections are used to group documents and choose permissions": "Samlinger brukes til å gruppere dokumenter og velge tillatelser",
   "Name": "Navn",
@@ -205,6 +206,7 @@
   "Move document": "Flytt dokument",
   "Moving": "Flytter",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Ved å flytte dokumentet <em>{{ title }}</em> til samlingen {{ newCollectionName }}, vil tilgangen endres for alle brukere i arbeidsområdet fra <em>{{ prevPermission }}</em> til <em>{{ newPermission }}</em>.",
+  "More options": "More options",
   "Submenu": "Undermeny",
   "Collections could not be loaded, please reload the app": "Samlinger kunne ikke lastes inn, vennligst last inn appen på nytt",
   "Start view": "Startvisning",
@@ -329,6 +331,7 @@
   "Mark all as read": "Merk alle som lest",
   "You're all caught up": "Du er helt oppdatert",
   "Icon": "Ikon",
+  "OAuth client icon": "OAuth client icon",
   "My App": "Min app",
   "Tagline": "Slagord",
   "A short description": "En kort beskrivelse",
@@ -405,12 +408,15 @@
   "{{ count }} groups added to the document": "{{ count }} grupper er lagt til i dokumentet",
   "{{ count }} groups added to the document_plural": "{{ count }} grupper er lagt til i dokumentene",
   "Logo": "Logo",
+  "Expand sidebar": "Expand sidebar",
+  "Collapse sidebar": "Collapse sidebar",
   "Archived collections": "Arkiverte samlinger",
   "New doc": "Nytt dokument",
   "Empty": "Tom",
   "Collapse": "Kollaps",
   "Expand": "Utvid",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Dokument ikke støttet – prøv Markdown, ren tekst, HTML eller Word",
+  "Import files": "Import files",
   "Go back": "Gå tilbake",
   "Go forward": "Gå frem",
   "Could not load shared documents": "Kunne ikke laste delte dokumenter",
@@ -460,6 +466,8 @@
   "Replacement": "Erstatning",
   "Replace": "Erstatt",
   "Replace all": "Erstatt alle",
+  "Image width": "Image width",
+  "Image height": "Image height",
   "Profile picture": "Profilbilde",
   "Create a new doc": "Lag et nytt dokument",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} vil ikke bli varslet, da de ikke har tilgang til dette dokumentet",
@@ -486,7 +494,8 @@
   "Create a new child doc": "Lag et nytt underdokument",
   "Delete table": "Slett tabell",
   "Delete file": "Slett fil",
-  "Width x Height": "Bredde x høyde",
+  "Width": "Width",
+  "Height": "Height",
   "Download file": "Last ned fil",
   "Replace file": "Erstatt fil",
   "Delete image": "Slett bilde",
@@ -680,6 +689,7 @@
   "only you": "kun deg",
   "person": "person",
   "people": "personer",
+  "Document title": "Document title",
   "Last updated": "Sist oppdatert",
   "Type '/' to insert, or start writing…": "Skriv '/' for å sette inn, eller begynn å skrive…",
   "Hide contents": "Skjul innhold",
@@ -924,6 +934,7 @@
   "Rotate secret": "Roter klientnøkkel",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotering vil ugyldiggjøre gjeldende klientnøkkel. Sørg for å oppdatere alle applikasjoner med disse nøklene.",
   "Displayed to users when authorizing": "Vist til brukere ved autorisering",
+  "Application icon": "Application icon",
   "Developer information shown to users when authorizing": "Utviklerinformasjon som vises til brukere ved autorisering",
   "Developer name": "Utviklernavn",
   "Developer URL": "Utvikler-URL",
@@ -1030,6 +1041,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "Disse innstillingene påvirker måten arbeidsområdet ditt vises for alle på teamet.",
   "Display": "Visning",
   "The logo is displayed at the top left of the application.": "Logo vises øverst til venstre i applikasjonen.",
+  "Workspace logo": "Workspace logo",
   "The workspace name, usually the same as your company name.": "Arbeidsområdets navn, vanligvis det samme som firmanavnet ditt.",
   "Description": "Beskrivelse",
   "A short description of your workspace.": "En kort beskrivelse av arbeidsområdet ditt.",
@@ -1260,6 +1272,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} oppdaterte {{ timeAgo }}",
   "You created {{ timeAgo }}": "Du opprettet {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} opprettet {{ timeAgo }}",
+  "Caption": "Caption",
   "Open": "Open",
   "Error loading data": "Feil ved lasting av data"
 }
