fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -998,7 +998,9 @@
   "Search people": "Rechercher des personnes",
   "No people matching your search": "Aucune personne ne correspond à votre recherche",
   "No people left to add": "Plus aucune personne à ajouter",
+  "Group admin": "Group admin",
   "Member": "Member",
+  "Admins": "Administrateurs",
   "Date created": "Créé le",
   "Crop Image": "Rogner l'image",
   "Crop image": "Rogner l’image",
@@ -1028,7 +1030,6 @@
   "Domain": "Domaine",
   "Views": "Vues",
   "All roles": "Tous les rôles",
-  "Admins": "Administrateurs",
   "Editors": "Éditeurs",
   "All status": "Tous les statuts",
   "Active": "Actif",
