fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -998,7 +998,9 @@
   "Search people": "Buscar personas",
   "No people matching your search": "No hay personas que coincidan con tu búsqueda",
   "No people left to add": "No quedan personas para agregar",
+  "Group admin": "Group admin",
   "Member": "Member",
+  "Admins": "Administradores",
   "Date created": "Fecha de creación",
   "Crop Image": "Recortar imagen",
   "Crop image": "Recortar imagen",
@@ -1028,7 +1030,6 @@
   "Domain": "Dominio",
   "Views": "Vistas",
   "All roles": "Todos los roles",
-  "Admins": "Administradores",
   "Editors": "Editores",
   "All status": "Todos los estados",
   "Active": "Activo",
