fix: New Czech translations from Crowdin [ci skip]

--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -998,7 +998,9 @@
   "Search people": "Hledat uživatele",
   "No people matching your search": "Vašemu vyhledávání neodpovídají žádní lidé",
   "No people left to add": "Nezbývají žádní lidé, které by bylo možné přidat",
+  "Group admin": "Group admin",
   "Member": "Member",
+  "Admins": "Správci",
   "Date created": "Datum vytvoření",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
@@ -1028,7 +1030,6 @@
   "Domain": "Doména",
   "Views": "Zobrazení",
   "All roles": "Všechny role",
-  "Admins": "Správci",
   "Editors": "Editoři",
   "All status": "All status",
   "Active": "Aktivní",
