fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -998,7 +998,9 @@
   "Search people": "Emberek keresése",
   "No people matching your search": "Egy személy sem felel meg a keresési szempontoknak",
   "No people left to add": "Nincs több hozzáadható személy",
+  "Group admin": "Group admin",
   "Member": "Member",
+  "Admins": "Adminisztrátorok",
   "Date created": "Létrehozás dátuma",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
@@ -1028,7 +1030,6 @@
   "Domain": "Domain",
   "Views": "Megtekintések",
   "All roles": "Összes szerep",
-  "Admins": "Adminisztrátorok",
   "Editors": "Szerkesztők",
   "All status": "Összes állapot",
   "Active": "Aktív",
