fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -998,7 +998,9 @@
   "Search people": "Szukaj osób",
   "No people matching your search": "Brak osób pasujących do Twojego wyszukiwania",
   "No people left to add": "Brak osób do dodania",
+  "Group admin": "Group admin",
   "Member": "Member",
+  "Admins": "Administratorzy",
   "Date created": "Data utworzenia",
   "Crop Image": "Przytnij obraz",
   "Crop image": "Przytnij obraz",
@@ -1028,7 +1030,6 @@
   "Domain": "Domena",
   "Views": "Wyświetleń",
   "All roles": "Wszystkie role",
-  "Admins": "Administratorzy",
   "Editors": "Edytory",
   "All status": "Wszystkie statusy",
   "Active": "Aktywne",
