--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -998,7 +998,9 @@
   "Search people": "사용자 검색",
   "No people matching your search": "찾으시는 사용자가 없습니다.",
   "No people left to add": "추가할 사용자가 없습니다",
+  "Group admin": "Group admin",
   "Member": "멤버",
+  "Admins": "관리자",
   "Date created": "생성 일자",
   "Crop Image": "이미지 자르기",
   "Crop image": "이미지 자르기",
@@ -1028,7 +1030,6 @@
   "Domain": "도메인",
   "Views": "열람",
   "All roles": "모든 역할",
-  "Admins": "관리자",
   "Editors": "에디터",
   "All status": "모든 상태",
   "Active": "활성",
