fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -998,7 +998,9 @@
   "Search people": "Personen suchen",
   "No people matching your search": "Keine Personen, die Ihrer Suche entsprechen",
   "No people left to add": "Keine Personen übrig zum Hinzufügen",
+  "Group admin": "Group admin",
   "Member": "Member",
+  "Admins": "Admins",
   "Date created": "Erstellungsdatum",
   "Crop Image": "Bild zuschneiden",
   "Crop image": "Bild zuschneiden",
@@ -1028,7 +1030,6 @@
   "Domain": "Domain",
   "Views": "Ansichten",
   "All roles": "Alle Rollen",
-  "Admins": "Admins",
   "Editors": "Redakteure",
   "All status": "Jeder Status",
   "Active": "Aktiv",
