fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -998,7 +998,9 @@
   "Search people": "Cerca persone",
   "No people matching your search": "Nessuna persona corrisponde alla tua ricerca",
   "No people left to add": "Non sono rimaste persone da aggiungere",
+  "Group admin": "Group admin",
   "Member": "Member",
+  "Admins": "Amministratori",
   "Date created": "Date created",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
@@ -1028,7 +1030,6 @@
   "Domain": "Domain",
   "Views": "Visualizzazioni",
   "All roles": "All roles",
-  "Admins": "Amministratori",
   "Editors": "Editors",
   "All status": "All status",
   "Active": "Attivo",
