fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -998,7 +998,9 @@
   "Search people": "メンバーを検索",
   "No people matching your search": "検索に一致する人は見つかりませんでした",
   "No people left to add": "追加できる人は存在しません",
+  "Group admin": "Group admin",
   "Member": "Member",
+  "Admins": "管理者",
   "Date created": "作成日時",
   "Crop Image": "Crop Image",
   "Crop image": "画像を切り取る",
@@ -1028,7 +1030,6 @@
   "Domain": "ドメイン",
   "Views": "閲覧数",
   "All roles": "全てのロール",
-  "Admins": "管理者",
   "Editors": "編集者",
   "All status": "全てのステータス",
   "Active": "アクティブ",
