fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -998,7 +998,9 @@
   "Search people": "Personen zoeken",
   "No people matching your search": "Geen personen die aan de zoekopdracht voldoen",
   "No people left to add": "Geen personen meer om toe te voegen",
+  "Group admin": "Group admin",
   "Member": "Member",
+  "Admins": "Beheerders",
   "Date created": "Aanmaakdatum",
   "Crop Image": "Afbeelding bijsnijden",
   "Crop image": "Afbeelding bijsnijden",
@@ -1028,7 +1030,6 @@
   "Domain": "Domein",
   "Views": "Weergaven",
   "All roles": "Alle rollen",
-  "Admins": "Beheerders",
   "Editors": "Bewerkers",
   "All status": "Alle statussen",
   "Active": "Actief",
