fix: New Portuguese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -998,7 +998,9 @@
   "Search people": "Procurar pessoas",
   "No people matching your search": "Nenhuma pessoa corresponde à sua pesquisa",
   "No people left to add": "Não sobrou ninguém para adicionar",
+  "Group admin": "Group admin",
   "Member": "Member",
+  "Admins": "Administradores",
   "Date created": "Date created",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
@@ -1028,7 +1030,6 @@
   "Domain": "Domínio",
   "Views": "Visualizações",
   "All roles": "Todos os papéis",
-  "Admins": "Administradores",
   "Editors": "Editores",
   "All status": "Todos os estados",
   "Active": "Activo",
