fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -998,7 +998,9 @@
   "Search people": "Sök efter personer",
   "No people matching your search": "Inga personer matchar din sökning",
   "No people left to add": "Inga personer kvar att lägga till",
+  "Group admin": "Group admin",
   "Member": "Member",
+  "Admins": "Administratörer",
   "Date created": "Date created",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
@@ -1028,7 +1030,6 @@
   "Domain": "Domän",
   "Views": "Visningar",
   "All roles": "Alla roller",
-  "Admins": "Administratörer",
   "Editors": "Redigerare",
   "All status": "Alla statusar",
   "Active": "Aktiv",
