fix: New Turkish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -998,7 +998,9 @@
   "Search people": "Kişi ara",
   "No people matching your search": "Aramanızla eşleşen kişi yok",
   "No people left to add": "Eklenecek kişi kalmadı",
+  "Group admin": "Group admin",
   "Member": "Member",
+  "Admins": "Yöneticiler",
   "Date created": "Date created",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
@@ -1028,7 +1030,6 @@
   "Domain": "Domain",
   "Views": "Görüntülenme",
   "All roles": "All roles",
-  "Admins": "Yöneticiler",
   "Editors": "Editors",
   "All status": "All status",
   "Active": "Aktif",
