--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -998,7 +998,9 @@
   "Search people": "Пошук користувачів",
   "No people matching your search": "Немає користувачів за вашим пошуковим запитом",
   "No people left to add": "Немає користувачів, щоб додати",
+  "Group admin": "Group admin",
   "Member": "Member",
+  "Admins": "Адміністратори",
   "Date created": "Date created",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
@@ -1028,7 +1030,6 @@
   "Domain": "Domain",
   "Views": "Перегляди",
   "All roles": "Всі ролі",
-  "Admins": "Адміністратори",
   "Editors": "Редактори",
   "All status": "Весь статус",
   "Active": "Активний",
