fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -998,7 +998,9 @@
   "Search people": "搜索用户",
   "No people matching your search": "没有符合搜索条件的用户",
   "No people left to add": "没有人可以添加",
+  "Group admin": "Group admin",
   "Member": "Member",
+  "Admins": "管理员",
   "Date created": "创建日期",
   "Crop Image": "裁剪图像",
   "Crop image": "裁剪图像",
@@ -1028,7 +1030,6 @@
   "Domain": "域",
   "Views": "浏览次数",
   "All roles": "所有角色",
-  "Admins": "管理员",
   "Editors": "编辑者",
   "All status": "所有状态",
   "Active": "活跃的",
