fix: New Chinese Traditional translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -998,7 +998,9 @@
   "Search people": "搜尋使用者",
   "No people matching your search": "找不到符合搜尋條件的使用者",
   "No people left to add": "所有人員都已經被新增",
+  "Group admin": "Group admin",
   "Member": "Member",
+  "Admins": "管理員",
   "Date created": "創建日期",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
@@ -1028,7 +1030,6 @@
   "Domain": "網域",
   "Views": "瀏覽次數",
   "All roles": "所有角色",
-  "Admins": "管理員",
   "Editors": "編輯者",
   "All status": "所有狀態",
   "Active": "上線",
