fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -998,7 +998,9 @@
   "Search people": "Tìm kiếm thành viên",
   "No people matching your search": "Không có người nào phù hợp với tìm kiếm của bạn",
   "No people left to add": "Không còn người để thêm",
+  "Group admin": "Group admin",
   "Member": "Member",
+  "Admins": "Quản trị viên",
   "Date created": "Date created",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
@@ -1028,7 +1030,6 @@
   "Domain": "Domain",
   "Views": "Lượt xem",
   "All roles": "All roles",
-  "Admins": "Quản trị viên",
   "Editors": "Editors",
   "All status": "All status",
   "Active": "Hoạt động",
