fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -998,7 +998,9 @@
   "Search people": "Procurar pessoas",
   "No people matching your search": "Nenhuma pessoa corresponde à sua pesquisa",
   "No people left to add": "Nenhuma pessoa restante para adicionar",
+  "Group admin": "Group admin",
   "Member": "Member",
+  "Admins": "Administradores",
   "Date created": "Data de criação",
   "Crop Image": "Cortar imagem",
   "Crop image": "Cortar imagem",
@@ -1028,7 +1030,6 @@
   "Domain": "Domínio",
   "Views": "Visualizações",
   "All roles": "Todas as funções",
-  "Admins": "Administradores",
   "Editors": "Editores",
   "All status": "Todos os status",
   "Active": "Ativo",
