--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -998,7 +998,9 @@
   "Search people": "Cari orang",
   "No people matching your search": "Tak ada orang yang cocok dengan pencarian Anda",
   "No people left to add": "Tak ada orang lagi yang dapat ditambahkan",
+  "Group admin": "Group admin",
   "Member": "Member",
+  "Admins": "Admin",
   "Date created": "Date created",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
@@ -1028,7 +1030,6 @@
   "Domain": "Domain",
   "Views": "Dilihat",
   "All roles": "All roles",
-  "Admins": "Admin",
   "Editors": "Editors",
   "All status": "All status",
   "Active": "Aktif",
