fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -998,7 +998,9 @@
   "Search people": "جستجوی افراد",
   "No people matching your search": "فردی با جستجوی شما مطابقت ندارد",
   "No people left to add": "فردی برای افزودن باقی نمانده است",
+  "Group admin": "Group admin",
   "Member": "Member",
+  "Admins": "مدیران",
   "Date created": "Date created",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
@@ -1028,7 +1030,6 @@
   "Domain": "Domain",
   "Views": "Views",
   "All roles": "All roles",
-  "Admins": "مدیران",
   "Editors": "Editors",
   "All status": "All status",
   "Active": "فعال",
