fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -998,7 +998,9 @@
   "Search people": "Søk i personer",
   "No people matching your search": "Ingen personer matcher søket ditt",
   "No people left to add": "Ingen flere personer å legge til",
+  "Group admin": "Group admin",
   "Member": "Medlem",
+  "Admins": "Administratorer",
   "Date created": "Dato opprettet",
   "Crop Image": "Beskjær bilde",
   "Crop image": "Beskjær bilde",
@@ -1028,7 +1030,6 @@
   "Domain": "Domene",
   "Views": "Visninger",
   "All roles": "Alle roller",
-  "Admins": "Administratorer",
   "Editors": "Redaktører",
   "All status": "Alle statuser",
   "Active": "Aktiv",
