fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -286,6 +286,7 @@
   "Including uploaded images and files in the exported data": "Inclure les images et fichiers transférés dans les données exportées",
   "{{count}} more user": "{{count}} utilisateur supplémentaire",
   "{{count}} more user_plural": "{{count}} utilisateurs supplémentaires",
+  "Filter options": "Filter options",
   "Filter": "Filtre",
   "No results": "Aucun résultat",
   "{{authorName}} created <3></3>": "{{authorName}} créé <3></3>",
