fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -286,6 +286,7 @@
   "Including uploaded images and files in the exported data": "A feltöltött képek és fájlok is exportálva lesznek",
   "{{count}} more user": "{{count}} more user",
   "{{count}} more user_plural": "{{count}} more users",
+  "Filter options": "Filter options",
   "Filter": "Szűrő",
   "No results": "Nincs találat",
   "{{authorName}} created <3></3>": "{{authorName}} hozta lére <3></3>",
