fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -286,6 +286,7 @@
   "Including uploaded images and files in the exported data": "Uwzględnianie przesłanych obrazów i plików w eksportowanych danych",
   "{{count}} more user": "{{count}} więcej użytkownika",
   "{{count}} more user_plural": "{{count}} więcej użytkowników",
+  "Filter options": "Filter options",
   "Filter": "Filtr",
   "No results": "Brak wyników",
   "{{authorName}} created <3></3>": "{{authorName}} stworzył <3></3>",
